--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,12 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Suggests: 
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 URL: https://github.com/loelschlaeger/ino
 BugReports: https://github.com/loelschlaeger/ino/issues
+VignetteBuilder: knitr
+Imports: 
+    magrittr
