--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,4 +25,6 @@ URL: https://github.com/loelschlaeger/ino
 BugReports: https://github.com/loelschlaeger/ino/issues
 VignetteBuilder: knitr
 Imports: 
-    magrittr
+    magrittr,
+    DiagrammeR
+    
