--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,12 +19,13 @@ RoxygenNote: 7.1.2
 Imports: 
     magrittr,
     DiagrammeR,
-    R.utils
+    R.utils,
+    ggplot2,
+    rlang
 Suggests: 
     knitr,
     rmarkdown,
     testthat (>= 3.0.0),
-    ggplot2,
     purrr
 Config/testthat/edition: 3
 URL: https://github.com/loelschlaeger/ino
