--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,16 @@ S3method(print,ino)
 S3method(print,summary.ino)
 S3method(summary,ino)
 export(fixed_initialization)
+export(nr_optima)
 export(optima)
 export(optimization_time)
 export(random_initialization)
 export(set_f)
 export(set_optimizer)
 importFrom(R.utils,withTimeout)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,geom_bar)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,theme_minimal)
+importFrom(rlang,.data)
 importFrom(stats,rnorm)
