--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,5 +15,6 @@ importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,theme_minimal)
+importFrom(mvtnorm,pmvnorm)
 importFrom(rlang,.data)
 importFrom(stats,rnorm)
