--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(random_initialization)
 export(set_f)
 export(set_optimizer)
 importFrom(R.utils,withTimeout)
+importFrom(evd,rgumbel)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,ggplot)
