--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,9 +8,11 @@ export(nr_optima)
 export(optima)
 export(optimization_time)
 export(random_initialization)
+export(set_data)
 export(set_f)
 export(set_optimizer)
 importFrom(R.utils,withTimeout)
+importFrom(crayon,underline)
 importFrom(evd,rgumbel)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_bar)
@@ -18,4 +20,5 @@ importFrom(ggplot2,ggplot)
 importFrom(ggplot2,theme_minimal)
 importFrom(mvtnorm,pmvnorm)
 importFrom(rlang,.data)
+importFrom(stats,dpois)
 importFrom(stats,rnorm)
