updated ToDo list

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,11 +11,14 @@ export(set_data)
 export(set_f)
 export(set_optimizer)
 importFrom(R.utils,withTimeout)
+importFrom(cowplot,plot_grid)
 importFrom(crayon,underline)
 importFrom(evd,rgumbel)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_bar)
+importFrom(ggplot2,geom_histogram)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,theme_minimal)
 importFrom(mvtnorm,pmvnorm)
 importFrom(rlang,.data)
