--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,3 +37,5 @@ Config/testthat/edition: 3
 URL: https://github.com/loelschlaeger/ino
 BugReports: https://github.com/loelschlaeger/ino/issues
 VignetteBuilder: knitr
+Depends: 
+    R (>= 2.10)
