Implemented random initialization strategy.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,4 +24,5 @@ importFrom(mvtnorm,pmvnorm)
 importFrom(rlang,.data)
 importFrom(stats,dpois)
 importFrom(stats,rnorm)
+importFrom(utils,capture.output)
 importFrom(utils,str)
