--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ importFrom(crayon,underline)
 importFrom(evd,rgumbel)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_bar)
+importFrom(ggplot2,geom_boxplot)
 importFrom(ggplot2,geom_histogram)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,scale_fill_manual)
