Added progress bar.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,8 +25,10 @@ importFrom(ggplot2,ggplot)
 importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,theme_minimal)
 importFrom(mvtnorm,pmvnorm)
+importFrom(progress,progress_bar)
 importFrom(rlang,.data)
 importFrom(stats,dpois)
 importFrom(stats,rnorm)
 importFrom(utils,capture.output)
+importFrom(utils,packageVersion)
 importFrom(utils,str)
