--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,24 +6,24 @@ S3method(print,summary.ino)
 S3method(summary,ino)
 export(data_subset_initialization)
 export(fixed_initialization)
-export(nr_optima)
-export(optimization_time)
 export(random_initialization)
 export(set_optimizer)
 export(set_optimizer_nlm)
 export(setup_ino)
 importFrom(R.utils,withTimeout)
 importFrom(RprobitB,delta)
-importFrom(cowplot,plot_grid)
 importFrom(crayon,underline)
+importFrom(dplyr,across)
+importFrom(dplyr,all_of)
+importFrom(dplyr,group_by_at)
+importFrom(dplyr,n)
+importFrom(dplyr,summarize)
 importFrom(evd,rgumbel)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_boxplot)
 importFrom(ggplot2,geom_histogram)
 importFrom(ggplot2,ggplot)
-importFrom(ggplot2,scale_fill_manual)
-importFrom(ggplot2,theme_minimal)
 importFrom(mvtnorm,pmvnorm)
 importFrom(progress,progress_bar)
 importFrom(rlang,.data)
