--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,12 +4,12 @@ S3method(plot,ino)
 S3method(print,ino)
 S3method(print,summary.ino)
 S3method(summary,ino)
-export(data_subset_initialization)
 export(fixed_initialization)
 export(random_initialization)
 export(set_optimizer)
 export(set_optimizer_nlm)
 export(setup_ino)
+export(subset_initialization)
 importFrom(R.utils,withTimeout)
 importFrom(RprobitB,delta)
 importFrom(crayon,underline)
@@ -19,6 +19,7 @@ importFrom(dplyr,group_by_at)
 importFrom(dplyr,n)
 importFrom(dplyr,summarize)
 importFrom(evd,rgumbel)
+importFrom(foreach,"%dopar%")
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_boxplot)
