modified plot function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(print,ino)
 S3method(print,summary.ino)
 S3method(summary,ino)
 export(fixed_initialization)
+export(nr_optima)
 export(random_initialization)
 export(set_optimizer)
 export(set_optimizer_nlm)
@@ -25,6 +26,7 @@ importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_boxplot)
 importFrom(ggplot2,geom_histogram)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,theme_minimal)
 importFrom(mvtnorm,pmvnorm)
 importFrom(progress,progress_bar)
 importFrom(rlang,.data)
