--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ importFrom(dplyr,summarize)
 importFrom(evd,rgumbel)
 importFrom(foreach,"%dopar%")
 importFrom(ggplot2,aes)
+importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_boxplot)
 importFrom(ggplot2,geom_histogram)
