Fixed LL of logit and probit and updated documentation.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(nr_optima)
 export(random_initialization)
 export(set_optimizer)
 export(set_optimizer_nlm)
+export(set_true)
 export(setup_ino)
 export(subset_initialization)
 importFrom(R.utils,withTimeout)
@@ -28,6 +29,7 @@ importFrom(ggplot2,geom_boxplot)
 importFrom(ggplot2,geom_histogram)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,theme_minimal)
+importFrom(ggplot2,xlab)
 importFrom(mvtnorm,pmvnorm)
 importFrom(progress,progress_bar)
 importFrom(rlang,.data)
