--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(plot,ino)
 S3method(print,ino)
+S3method(print,ino_call)
 S3method(print,summary.ino)
 S3method(summary,ino)
 export(fixed_initialization)
@@ -34,6 +35,7 @@ importFrom(mvtnorm,pmvnorm)
 importFrom(progress,progress_bar)
 importFrom(rlang,.data)
 importFrom(stats,dpois)
+importFrom(stats,kmeans)
 importFrom(stats,rnorm)
 importFrom(utils,capture.output)
 importFrom(utils,packageVersion)
