--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(print,ino)
 S3method(print,ino_call)
 S3method(print,summary.ino)
 S3method(summary,ino)
+export(clear_optimizations)
 export(fixed_initialization)
 export(nr_optima)
 export(random_initialization)
