--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,15 +5,18 @@ S3method(print,ino)
 S3method(print,ino_call)
 S3method(print,summary.ino)
 S3method(summary,ino)
-export(clear_optimizations)
+export(clear_ino)
 export(fixed_initialization)
+export(merge_ino)
 export(nr_optima)
 export(random_initialization)
 export(set_optimizer)
 export(set_optimizer_nlm)
-export(set_true)
+export(set_optimizer_optim)
 export(setup_ino)
+export(standardize_initialization)
 export(subset_initialization)
+export(true_ino)
 importFrom(R.utils,withTimeout)
 importFrom(RprobitB,delta)
 importFrom(crayon,underline)
