--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,13 @@
 S3method(plot,ino)
 S3method(print,ino)
 S3method(print,ino_call)
+S3method(print,optimizer)
 S3method(print,summary.ino)
 S3method(summary,ino)
 export(clear_ino)
 export(fixed_initialization)
 export(merge_ino)
-export(nr_optima)
+export(overview_optima)
 export(random_initialization)
 export(set_optimizer)
 export(set_optimizer_nlm)
