--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,15 @@
 Package: ino
 Title: Initialization of Numerical Optimization
-Version: 0.0.0.9000
+Version: 0.1.0
 Authors@R: 
     person("Lennart", "Oelschl\u00e4ger", 
            email = "lennart.oelschlaeger@uni-bielefeld.de", 
-           role = c("aut", "cre"))
+           role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0001-5421-9313"))
     person("Marius", "\u00d6etting", 
            email = "marius.oetting@uni-bielefeld.de", 
-           role = c("aut", "cre"))
+           role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0002-9373-0365"))
 Description: Implementation of several initialization strategies for the 
     numerical optimization of real-valued functions, in particular likelihood
     functions of statistical models.
@@ -38,5 +40,5 @@ Config/testthat/edition: 3
 URL: https://github.com/loelschlaeger/ino
 BugReports: https://github.com/loelschlaeger/ino/issues
 VignetteBuilder: knitr
-Depends: 
-    R (>= 2.10)
+Depends:
+    R (>= 4.0.0)
