--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,13 @@ S3method(print,optimizer)
 S3method(print,summary.ino)
 S3method(summary,ino)
 export(clear_ino)
+export(f_ackley)
+export(f_beale)
+export(f_easom)
+export(f_ll_hmm)
+export(f_ll_mnl)
+export(f_ll_mnp)
+export(f_matyas)
 export(fixed_initialization)
 export(merge_ino)
 export(overview_optima)
@@ -15,6 +22,8 @@ export(set_optimizer)
 export(set_optimizer_nlm)
 export(set_optimizer_optim)
 export(setup_ino)
+export(sim_mnl)
+export(sim_mnp)
 export(standardize_initialization)
 export(subset_initialization)
 importFrom(RprobitB,delta)
