--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,14 @@
 S3method(plot,ino)
 S3method(print,ino)
 S3method(print,ino_call)
+S3method(print,opti)
 S3method(print,optimizer)
+S3method(print,prob)
+S3method(print,runs)
 S3method(print,summary.ino)
 S3method(summary,ino)
 export(clear_ino)
+export(do.call_timed)
 export(f_ackley)
 export(f_beale)
 export(f_easom)
@@ -15,6 +19,7 @@ export(f_ll_mnl)
 export(f_ll_mnp)
 export(f_matyas)
 export(fixed_initialization)
+export(is_number)
 export(merge_ino)
 export(overview_optima)
 export(random_initialization)
@@ -26,6 +31,9 @@ export(sim_mnl)
 export(sim_mnp)
 export(standardize_initialization)
 export(subset_initialization)
+export(timed)
+export(try_silent)
+export(try_silent_timed)
 importFrom(RprobitB,delta)
 importFrom(crayon,underline)
 importFrom(dplyr,across)
@@ -48,7 +56,8 @@ importFrom(progress,progress_bar)
 importFrom(rlang,.data)
 importFrom(stats,dpois)
 importFrom(stats,kmeans)
+importFrom(stats,nlm)
+importFrom(stats,optim)
 importFrom(stats,rnorm)
 importFrom(utils,capture.output)
 importFrom(utils,packageVersion)
-importFrom(utils,str)
