--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,15 +2,13 @@
 
 S3method(plot,ino)
 S3method(print,ino)
-S3method(print,ino_call)
 S3method(print,opti)
-S3method(print,optimizer)
 S3method(print,prob)
 S3method(print,runs)
+S3method(print,strategy_call)
 S3method(print,summary.ino)
 S3method(summary,ino)
 export(clear_ino)
-export(do.call_timed)
 export(f_ackley)
 export(f_beale)
 export(f_easom)
@@ -19,21 +17,14 @@ export(f_ll_mnl)
 export(f_ll_mnp)
 export(f_matyas)
 export(fixed_initialization)
-export(is_number)
 export(merge_ino)
 export(overview_optima)
 export(random_initialization)
-export(set_optimizer)
-export(set_optimizer_nlm)
-export(set_optimizer_optim)
 export(setup_ino)
 export(sim_mnl)
 export(sim_mnp)
 export(standardize_initialization)
 export(subset_initialization)
-export(timed)
-export(try_silent)
-export(try_silent_timed)
 importFrom(RprobitB,delta)
 importFrom(crayon,underline)
 importFrom(dplyr,across)
@@ -51,13 +42,12 @@ importFrom(ggplot2,geom_histogram)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,theme_minimal)
 importFrom(ggplot2,xlab)
+importFrom(lifecycle,deprecated)
 importFrom(mvtnorm,pmvnorm)
 importFrom(progress,progress_bar)
 importFrom(rlang,.data)
 importFrom(stats,dpois)
 importFrom(stats,kmeans)
-importFrom(stats,nlm)
-importFrom(stats,optim)
 importFrom(stats,rnorm)
 importFrom(utils,capture.output)
 importFrom(utils,packageVersion)
