--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,7 @@
 
 S3method(plot,ino)
 S3method(print,ino)
-S3method(print,opti)
+S3method(print,opts)
 S3method(print,prob)
 S3method(print,runs)
 S3method(print,strategy_call)
@@ -25,6 +25,7 @@ export(sim_mnl)
 export(sim_mnp)
 export(standardize_initialization)
 export(subset_initialization)
+import(optimizeR)
 importFrom(RprobitB,delta)
 importFrom(crayon,underline)
 importFrom(dplyr,across)
