Work on strategies.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(print,runs)
 S3method(print,strategy_call)
 S3method(print,summary.ino)
 S3method(summary,ino)
+export(ao_initialization)
 export(clear_ino)
 export(f_ackley)
 export(f_beale)
@@ -29,6 +30,7 @@ export(subset_initialization)
 import(optimizeR)
 importFrom(RprobitB,delta)
 importFrom(crayon,underline)
+importFrom(doSNOW,registerDoSNOW)
 importFrom(dplyr,across)
 importFrom(dplyr,all_of)
 importFrom(dplyr,group_by_at)
@@ -36,20 +38,21 @@ importFrom(dplyr,n)
 importFrom(dplyr,summarize)
 importFrom(evd,rgumbel)
 importFrom(foreach,"%dopar%")
+importFrom(foreach,foreach)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_boxplot)
 importFrom(ggplot2,geom_histogram)
 importFrom(ggplot2,ggplot)
-importFrom(ggplot2,theme_minimal)
-importFrom(ggplot2,xlab)
 importFrom(lifecycle,deprecated)
 importFrom(mvtnorm,pmvnorm)
+importFrom(optimizeR,optimizeR)
+importFrom(parallel,makeCluster)
+importFrom(parallel,stopCluster)
 importFrom(progress,progress_bar)
 importFrom(rlang,.data)
 importFrom(stats,dpois)
 importFrom(stats,kmeans)
 importFrom(stats,rnorm)
-importFrom(utils,capture.output)
 importFrom(utils,packageVersion)
