--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,9 @@ export(standardize_initialization)
 export(subset_initialization)
 import(optimizeR)
 importFrom(RprobitB,delta)
+importFrom(cli,cli_abort)
+importFrom(cli,cli_alert_info)
+importFrom(cli,cli_warn)
 importFrom(crayon,underline)
 importFrom(doSNOW,registerDoSNOW)
 importFrom(dplyr,across)
