--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,7 +18,10 @@ export(f_ll_mnp)
 export(f_matyas)
 export(fixed_initialization)
 export(merge_ino)
+export(npar)
+export(nruns)
 export(overview_optima)
+export(overview_vars)
 export(random_initialization)
 export(setup_ino)
 export(sim_mnl)
@@ -32,16 +35,10 @@ importFrom(cli,cli_alert_info)
 importFrom(cli,cli_warn)
 importFrom(crayon,underline)
 importFrom(doSNOW,registerDoSNOW)
-importFrom(dplyr,across)
-importFrom(dplyr,all_of)
-importFrom(dplyr,group_by_at)
 importFrom(dplyr,mutate_if)
-importFrom(dplyr,n)
-importFrom(dplyr,summarize)
 importFrom(evd,rgumbel)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
-importFrom(lifecycle,deprecated)
 importFrom(mvtnorm,pmvnorm)
 importFrom(optimizeR,optimizeR)
 importFrom(parallel,detectCores)
