--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,16 +17,17 @@ export(f_ll_mnl)
 export(f_ll_mnp)
 export(f_matyas)
 export(fixed_initialization)
+export(get_vars)
 export(npar)
 export(nruns)
 export(overview_optima)
-export(overview_vars)
 export(random_initialization)
 export(setup_ino)
 export(sim_mnl)
 export(sim_mnp)
 export(standardize_initialization)
 export(subset_initialization)
+export(var_names)
 import(optimizeR)
 importFrom(RprobitB,delta)
 importFrom(cli,cli_abort)
@@ -35,10 +36,19 @@ importFrom(cli,cli_warn)
 importFrom(crayon,underline)
 importFrom(doSNOW,registerDoSNOW)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,desc)
 importFrom(evd,rgumbel)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,facet_wrap)
+importFrom(ggplot2,geom_boxplot)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,scale_y_continuous)
+importFrom(ggplot2,theme)
 importFrom(mvtnorm,pmvnorm)
 importFrom(optimizeR,optimizeR)
 importFrom(parallel,detectCores)
