--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(npar)
 export(nruns)
 export(overview_optima)
 export(random_initialization)
+export(set_optimizer_ao)
 export(setup_ino)
 export(sim_mnl)
 export(sim_mnp)
@@ -30,6 +31,7 @@ export(subset_initialization)
 export(var_names)
 import(optimizeR)
 importFrom(RprobitB,delta)
+importFrom(ao,ao)
 importFrom(cli,cli_abort)
 importFrom(cli,cli_alert_info)
 importFrom(cli,cli_warn)
@@ -40,6 +42,7 @@ importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,desc)
 importFrom(evd,rgumbel)
+importFrom(foreach,"%do%")
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(ggplot2,aes)
