--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,6 @@ S3method(print,ino)
 S3method(print,opts)
 S3method(print,prob)
 S3method(print,runs)
-S3method(print,strategy_call)
 S3method(summary,ino)
 export(clear_ino)
 export(f_ackley)
@@ -18,6 +17,7 @@ export(f_ll_mnp)
 export(f_matyas)
 export(fixed_initialization)
 export(get_vars)
+export(ngrid)
 export(npar)
 export(nruns)
 export(overview_optima)
