Fixed small bugs.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,13 +52,16 @@ importFrom(ggplot2,geom_boxplot)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
+importFrom(ggplot2,ylab)
 importFrom(mvtnorm,pmvnorm)
 importFrom(optimizeR,optimizeR)
 importFrom(parallel,detectCores)
 importFrom(parallel,makeCluster)
 importFrom(parallel,stopCluster)
 importFrom(progress,progress_bar)
+importFrom(rlang,.data)
 importFrom(stats,dpois)
 importFrom(stats,kmeans)
 importFrom(stats,rnorm)
+importFrom(stats,runif)
 importFrom(utils,packageVersion)
