--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(setup_ino)
 export(sim_mnp)
 export(standardize_initialization)
 export(subset_initialization)
+export(update_opt)
 export(var_names)
 import(optimizeR)
 importFrom(ao,ao)
