Add simulation example for HMM LL.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(overview_optima)
 export(random_initialization)
 export(set_optimizer_ao)
 export(setup_ino)
+export(sim_hmm)
 export(sim_mnp)
 export(standardize_initialization)
 export(subset_initialization)
@@ -57,7 +58,7 @@ importFrom(parallel,makeCluster)
 importFrom(parallel,stopCluster)
 importFrom(progress,progress_bar)
 importFrom(rlang,.data)
-importFrom(stats,dpois)
+importFrom(stats,dnorm)
 importFrom(stats,kmeans)
 importFrom(stats,rnorm)
 importFrom(stats,runif)
