Updated failure messages.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,9 @@ export(f_ll_hmm)
 export(f_ll_mnp)
 export(f_matyas)
 export(fixed_initialization)
+export(get_fails)
 export(get_vars)
+export(nfails)
 export(ngrid)
 export(npar)
 export(nruns)
