--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(print,opts)
 S3method(print,prob)
 S3method(print,runs)
 S3method(summary,ino)
+export(Nop)
 export(clear_ino)
 export(f_ackley)
 export(f_beale)
@@ -54,6 +55,7 @@ importFrom(ggplot2,ggplot)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,ylab)
+importFrom(glue,glue)
 importFrom(mvtnorm,pmvnorm)
 importFrom(optimizeR,optimizeR)
 importFrom(parallel,detectCores)
