--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,7 +57,8 @@ importFrom(ggplot2,theme)
 importFrom(ggplot2,ylab)
 importFrom(glue,glue)
 importFrom(mvtnorm,pmvnorm)
-importFrom(optimizeR,optimizeR)
+importFrom(optimizeR,apply_optimizer)
+importFrom(optimizeR,set_optimizer)
 importFrom(parallel,detectCores)
 importFrom(parallel,makeCluster)
 importFrom(parallel,stopCluster)
