--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,9 +26,9 @@ export(nfails)
 export(ngrid)
 export(npar)
 export(nruns)
+export(optimizer_ao)
 export(overview_optima)
 export(random_initialization)
-export(set_optimizer_ao)
 export(setup_ino)
 export(sim_hmm)
 export(sim_mnp)
