--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,6 @@ S3method(print,ino)
 S3method(print,opts)
 S3method(print,prob)
 S3method(print,runs)
-S3method(print,summary.Nop)
 S3method(summary,Nop)
 S3method(summary,ino)
 export(Nop)
@@ -39,7 +38,9 @@ export(var_names)
 import(optimizeR)
 importFrom(ao,ao)
 importFrom(cli,cli_abort)
+importFrom(cli,cli_alert)
 importFrom(cli,cli_alert_info)
+importFrom(cli,cli_alert_success)
 importFrom(cli,cli_warn)
 importFrom(crayon,underline)
 importFrom(doSNOW,registerDoSNOW)
