--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,7 +37,8 @@ Suggests:
     testthat (>= 3.0.0),
     purrr,
     pracma,
-    fHMM
+    fHMM,
+    covr
 Config/testthat/edition: 3
 URL: https://github.com/loelschlaeger/ino
 BugReports: https://github.com/loelschlaeger/ino/issues
