work on introductory vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,7 +35,7 @@ importFrom(ggplot2,theme)
 importFrom(ggplot2,ylab)
 importFrom(glue,glue)
 importFrom(mvtnorm,pmvnorm)
-importFrom(optimizeR,set_optimizer)
+importFrom(optimizeR,define_optimizer)
 importFrom(parallel,makeCluster)
 importFrom(parallel,stopCluster)
 importFrom(stats,dnorm)
