update introduction vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,7 +21,10 @@ importFrom(cli,cli_alert_success)
 importFrom(cli,cli_warn)
 importFrom(crayon,underline)
 importFrom(doSNOW,registerDoSNOW)
+importFrom(dplyr,"%>%")
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,group_by)
+importFrom(dplyr,mutate)
 importFrom(foreach,"%do%")
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
@@ -38,6 +41,7 @@ importFrom(mvtnorm,pmvnorm)
 importFrom(optimizeR,define_optimizer)
 importFrom(parallel,makeCluster)
 importFrom(parallel,stopCluster)
+importFrom(rlang,.data)
 importFrom(stats,dnorm)
 importFrom(stats,rnorm)
 importFrom(utils,packageVersion)
