--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ importFrom(cli,cli_abort)
 importFrom(cli,cli_alert_info)
 importFrom(cli,cli_alert_success)
 importFrom(cli,cli_warn)
+importFrom(cli,style_italic)
 importFrom(crayon,underline)
 importFrom(doSNOW,registerDoSNOW)
 importFrom(dplyr,"%>%")
