--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,7 +22,6 @@ importFrom(cli,cli_warn)
 importFrom(cli,style_italic)
 importFrom(crayon,underline)
 importFrom(doSNOW,registerDoSNOW)
-importFrom(dplyr,"%>%")
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
@@ -45,5 +44,8 @@ importFrom(parallel,stopCluster)
 importFrom(rlang,.data)
 importFrom(scales,percent)
 importFrom(stats,dnorm)
+importFrom(stats,median)
+importFrom(stats,reorder)
 importFrom(stats,rnorm)
 importFrom(utils,packageVersion)
+importFrom(utils,tail)
