--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -5,8 +5,8 @@
 ^LICENSE\.md$
 ^README\.Rmd$
 ^\.github$
-cran-comments.md
-^CRAN-SUBMISSION$
 ^codecov\.yml$
 ^\vignettes\**.R$
-^sticker\.R$
+^CRAN-SUBMISSION$
+^cran-comments\.md$
+^sticker$
