--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,24 +25,23 @@ importFrom(doSNOW,registerDoSNOW)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
+importFrom(dplyr,select)
+importFrom(dplyr,summarize)
 importFrom(foreach,"%do%")
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(ggplot2,aes)
-importFrom(ggplot2,element_blank)
-importFrom(ggplot2,facet_wrap)
-importFrom(ggplot2,geom_boxplot)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,scale_y_continuous)
-importFrom(ggplot2,theme)
-importFrom(ggplot2,ylab)
+importFrom(ggplot2,theme_minimal)
+importFrom(ggridges,stat_density_ridges)
 importFrom(glue,glue)
 importFrom(mvtnorm,pmvnorm)
 importFrom(optimizeR,define_optimizer)
 importFrom(parallel,makeCluster)
 importFrom(parallel,stopCluster)
 importFrom(rlang,.data)
-importFrom(scales,percent)
+importFrom(stats,complete.cases)
 importFrom(stats,dnorm)
 importFrom(stats,median)
 importFrom(stats,reorder)
