--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,7 +31,10 @@ importFrom(foreach,"%do%")
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,after_stat)
+importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme_minimal)
 importFrom(ggridges,stat_density_ridges)
