--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ importFrom(optimizeR,define_optimizer)
 importFrom(parallel,makeCluster)
 importFrom(parallel,stopCluster)
 importFrom(rlang,.data)
+importFrom(stats,bw.nrd)
 importFrom(stats,complete.cases)
 importFrom(stats,dnorm)
 importFrom(stats,median)
