removed ao optimizer

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,40 +12,38 @@ Authors@R: c(
            comment = c(ORCID = "0000-0002-9373-0365")),
     person("Dietmar", "Bauer", 
            email = "dietmar.bauer@uni-bielefeld.de", 
-           role = "aut",
+           role = c("aut"),
            comment = c(ORCID = "0000-0003-2920-7032"))
            )
-Description: Implementation of initialization strategies for the 
-    numerical optimization of real-valued functions, in particular likelihood
-    functions of statistical models.
+Description: Analysis of the initialization for numerical optimization of 
+    real-valued functions, including likelihood functions of statistical models.
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
 LazyDataCompression: xz
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
-Imports: 
-    ggplot2,
-    mvtnorm,
-    crayon,
+Imports:
     cli,
+    crayon,
+    doSNOW,
     dplyr,
     foreach,
-    doSNOW,
-    ao (>= 0.2.3),
+    ggplot2,
     glue,
+    mvtnorm,
     rlang,
     scales
-Suggests: 
-    knitr,
-    rmarkdown,
-    testthat (>= 3.0.0),
-    purrr,
-    pracma,
-    fHMM,
+Suggests:
     covr,
     devtools,
-    DT
+    DT,
+    fHMM,
+    knitr,
+    purrr,
+    pracma,
+    rmarkdown,
+    testthat (>= 3.0.0)
 Config/testthat/edition: 3
 URL: https://github.com/loelschlaeger/ino
 BugReports: https://github.com/loelschlaeger/ino/issues
