--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,31 +23,34 @@ importFrom(cli,style_italic)
 importFrom(crayon,underline)
 importFrom(doSNOW,registerDoSNOW)
 importFrom(dplyr,bind_rows)
-importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
-importFrom(dplyr,select)
 importFrom(dplyr,summarize)
 importFrom(forcats,fct_reorder)
 importFrom(foreach,"%do%")
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,annotate)
+importFrom(ggplot2,coord_cartesian)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,geom_boxplot)
+importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
-importFrom(ggplot2,scale_y_continuous)
+importFrom(ggplot2,ggtitle)
+importFrom(ggplot2,scale_x_continuous)
+importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_minimal)
-importFrom(ggridges,stat_density_ridges)
 importFrom(glue,glue)
 importFrom(mvtnorm,pmvnorm)
 importFrom(optimizeR,define_optimizer)
 importFrom(parallel,makeCluster)
 importFrom(parallel,stopCluster)
 importFrom(rlang,.data)
+importFrom(scales,label_percent)
 importFrom(scales,percent)
-importFrom(stats,bw.nrd)
 importFrom(stats,complete.cases)
 importFrom(stats,dnorm)
 importFrom(stats,median)
-importFrom(stats,reorder)
 importFrom(stats,rnorm)
 importFrom(utils,packageVersion)
 importFrom(utils,tail)
