Add probit vignette (#25)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,12 +28,13 @@ Imports:
     crayon,
     doSNOW,
     dplyr,
+    forcats,
     foreach,
     ggplot2,
     glue,
     mvtnorm,
+    reshape2,
     rlang,
-    forcats,
     scales
 Suggests:
     covr,
@@ -41,6 +42,7 @@ Suggests:
     DT,
     fHMM,
     knitr,
+    markdown,
     purrr,
     pracma,
     rmarkdown,
