--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,9 +12,8 @@ Authors@R: c(
            comment = c(ORCID = "0000-0002-9373-0365")),
     person("Dietmar", "Bauer", 
            email = "dietmar.bauer@uni-bielefeld.de", 
-           role = c("aut"),
-           comment = c(ORCID = "0000-0003-2920-7032"))
-           )
+           role = c("ctb")
+           ))
 Description: Analysis of the initialization for numerical optimization of 
     real-valued functions, including likelihood functions of statistical models.
 License: GPL (>= 3)
