New `$trace()` method to capture the steps during optimization with `stats::nlm()`.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,8 @@ importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_minimal)
 importFrom(glue,glue)
 importFrom(mvtnorm,pmvnorm)
+importFrom(optimizeR,apply_optimizer)
+importFrom(optimizeR,optimizer_nlm)
 importFrom(parallel,makeCluster)
 importFrom(parallel,stopCluster)
 importFrom(reshape2,melt)
@@ -53,6 +55,7 @@ importFrom(scales,percent)
 importFrom(stats,complete.cases)
 importFrom(stats,dnorm)
 importFrom(stats,median)
+importFrom(stats,nlm)
 importFrom(stats,rnorm)
 importFrom(utils,packageVersion)
 importFrom(utils,tail)
