Updated pkgdown structure.

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -16,22 +16,17 @@ authors:
 
 reference:
 - title: Numerical optimization problem object
-  desc: The central object when working with {ino}.
+  desc: The central objects when working with {ino}.
   contents:
   - Nop
-- title: Functions
-  desc: The following functions to demonstrate numerical optimization are included in the package.
-  contents:
-  - has_keyword("function")
-- title: Applications
-  desc: The following pre-computed applications are included in the package, see the vignettes.
+  - Runs
+- title: Demos
+  desc: The following demos are included in the package, see the vignettes.
   contents:
   - has_keyword("demo")
-- title: Small utils
-  desc: These helper functions may be useful beyond {ino}.
-  contents:
-  - has_keyword("utils")
+  - has_keyword("function")
 - title: Internal
   desc: These functions are not user-level.
   contents:
   - has_keyword("internal")
+  - has_keyword("checks")
