--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ importFrom(doSNOW,registerDoSNOW)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,mutate)
 importFrom(dplyr,summarize)
+importFrom(ellipsis,check_dots_used)
 importFrom(forcats,fct_reorder)
 importFrom(foreach,"%do%")
 importFrom(foreach,"%dopar%")
