--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,54 +4,30 @@ S3method(plot,Nop)
 S3method(print,Nop)
 S3method(summary,Nop)
 export(Nop)
-export(f_ackley)
-export(f_ll_hmm)
-export(f_ll_mnp)
-export(sim_hmm)
-export(sim_mnp)
-import(optimizeR)
-importFrom(cli,cli_abort)
-importFrom(cli,cli_alert_info)
-importFrom(cli,cli_alert_success)
-importFrom(cli,cli_warn)
-importFrom(cli,style_italic)
-importFrom(crayon,underline)
-importFrom(doSNOW,registerDoSNOW)
-importFrom(dplyr,bind_rows)
+importFrom(TestFunctions,TF_ackley)
 importFrom(dplyr,mutate)
 importFrom(dplyr,summarize)
-importFrom(ellipsis,check_dots_used)
 importFrom(forcats,fct_reorder)
-importFrom(foreach,"%do%")
-importFrom(foreach,"%dopar%")
-importFrom(foreach,foreach)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,annotate)
 importFrom(ggplot2,coord_cartesian)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,geom_boxplot)
-importFrom(ggplot2,geom_hline)
-importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,scale_x_continuous)
-importFrom(ggplot2,scale_x_discrete)
-importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_minimal)
-importFrom(glue,glue)
-importFrom(mvtnorm,pmvnorm)
 importFrom(optimizeR,apply_optimizer)
+importFrom(optimizeR,define_optimizer)
 importFrom(optimizeR,optimizer_nlm)
-importFrom(parallel,makeCluster)
-importFrom(parallel,stopCluster)
-importFrom(reshape2,melt)
+importFrom(optimizeR,optimizer_optim)
 importFrom(rlang,.data)
 importFrom(scales,label_percent)
 importFrom(scales,percent)
 importFrom(stats,complete.cases)
-importFrom(stats,dnorm)
 importFrom(stats,median)
 importFrom(stats,nlm)
 importFrom(stats,rnorm)
+importFrom(stats,sd)
