--- a/.github/workflows/render-readme.yaml
+++ b/.github/workflows/render-readme.yaml
@@ -33,5 +33,6 @@ jobs:
         run: |
           git config --local user.name "$GITHUB_ACTOR"
           git config --local user.email "$GITHUB_ACTOR@users.noreply.github.com"
-          git commit $README.md -m 'rendered README' || echo "No changes to commit"
+          git add README.md
+          git commit README.md -m 'rendered README' || echo "No changes to commit"
           git push origin || echo "No changes to commit"
