--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_minimal)
+importFrom(numDeriv,grad)
 importFrom(rlang,.data)
 importFrom(scales,label_percent)
 importFrom(scales,percent)
