--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,8 +30,10 @@ Imports:
     forcats,
     future.apply,
     ggplot2,
+    normalize,
     numDeriv,
     optimizeR (>= 1.0.2),
+    portion,
     progressr,
     rlang,
     scales,
