--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,7 @@ Description: Analysis of the initialization for numerical optimization of
 License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.0
 Depends:
     R (>= 4.0.0)
 Imports:
@@ -40,7 +40,9 @@ Imports:
     stats
 Suggests:
     knitr,
+    fHMM (>= 1.2.1),
     renv,
+    rmarkdown,
     testthat,
     TestFunctions
 Config/testthat/edition: 3
