--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,10 +12,14 @@ importFrom(ggplot2,annotate)
 importFrom(ggplot2,coord_cartesian)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,geom_boxplot)
+importFrom(ggplot2,geom_hline)
+importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,scale_x_continuous)
+importFrom(ggplot2,scale_x_discrete)
+importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_minimal)
 importFrom(normalize,normalize)
@@ -23,6 +27,7 @@ importFrom(numDeriv,grad)
 importFrom(optimizeR,Objective)
 importFrom(portion,portion)
 importFrom(progressr,progressor)
+importFrom(reshape2,melt)
 importFrom(rlang,.data)
 importFrom(scales,label_percent)
 importFrom(scales,percent)
