--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ino
 Title: Initialization of Numerical Optimization
-Version: 1.0.1.9000
+Version: 1.0.2
 Authors@R: c(
     person("Lennart", "Oelschl\u00e4ger", 
            email = "oelschlaeger.lennart@gmail.com", 
@@ -20,7 +20,7 @@ Description: Analysis of the initialization for numerical optimization of
 License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.0
+RoxygenNote: 7.3.1
 Depends:
     R (>= 4.0.0)
 Imports:
@@ -32,7 +32,8 @@ Imports:
     ggplot2,
     normalize,
     numDeriv,
-    optimizeR (>= 1.0.2),
+    oeli (>= 0.5.2),
+    optimizeR (>= 1.1.1),
     portion,
     progressr,
     rlang,
@@ -40,7 +41,7 @@ Imports:
     stats
 Suggests:
     knitr,
-    fHMM (>= 1.2.1),
+    fHMM (>= 1.3.1),
     renv,
     rmarkdown,
     testthat,
