--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,24 +28,31 @@ Imports:
     cli,
     dplyr,
     forcats,
+    future,
     future.apply,
     ggplot2,
+    glue,
     normalize,
     numDeriv,
-    oeli (>= 0.5.2),
-    optimizeR (>= 1.1.1),
+    oeli,
+    optimizeR,
     portion,
     progressr,
+    purrr,
+    R6,
+    reshape2,
     rlang,
     scales,
-    stats
+    stats,
+    TestFunctions,
+    tibble,
+    utils
 Suggests:
     knitr,
     fHMM (>= 1.3.1),
     renv,
     rmarkdown,
-    testthat,
-    TestFunctions
+    testthat
 Config/testthat/edition: 3
 URL: https://loelschlaeger.de/ino/, https://github.com/loelschlaeger/ino
 BugReports: https://github.com/loelschlaeger/ino/issues
