--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,11 +32,11 @@ Imports:
     future.apply,
     ggplot2,
     glue,
-    normalize,
+    normalize (>= 0.1.2),
     numDeriv,
     oeli (>= 0.7.3),
     optimizeR,
-    portion,
+    portion (>= 0.1.2),
     progressr,
     purrr,
     R6,
