--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,8 +34,8 @@ Imports:
     glue,
     normalize (>= 0.1.2),
     numDeriv,
-    oeli (>= 0.7.3),
-    optimizeR,
+    oeli (>= 0.7.4),
+    optimizeR (>= 1.2.1),
     portion (>= 0.1.2),
     progressr,
     purrr,
