--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,6 @@ S3method(autoplot,Nop_optima)
 S3method(autoplot,Nop_results)
 export(Nop)
 importFrom(R6,R6Class)
-importFrom(TestFunctions,TF_ackley)
 importFrom(checkmate,assert_count)
 importFrom(checkmate,assert_flag)
 importFrom(checkmate,assert_number)
@@ -46,7 +45,6 @@ importFrom(dplyr,select)
 importFrom(dplyr,slice_max)
 importFrom(dplyr,slice_min)
 importFrom(dplyr,summarize)
-importFrom(forcats,fct_reorder)
 importFrom(future,multicore)
 importFrom(future,multisession)
 importFrom(future,plan)
@@ -73,9 +71,7 @@ importFrom(ggplot2,scale_x_discrete)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_minimal)
-importFrom(glue,glue)
 importFrom(normalize,normalize)
-importFrom(numDeriv,grad)
 importFrom(oeli,Storage)
 importFrom(oeli,check_missing)
 importFrom(oeli,check_numeric_vector)
@@ -89,15 +85,13 @@ importFrom(progressr,progressor)
 importFrom(purrr,flatten_chr)
 importFrom(purrr,map)
 importFrom(purrr,map_dfc)
-importFrom(reshape2,melt)
 importFrom(rlang,.data)
 importFrom(rlang,set_names)
-importFrom(scales,label_percent)
-importFrom(scales,percent)
 importFrom(stats,complete.cases)
 importFrom(stats,median)
 importFrom(stats,nlm)
 importFrom(stats,optim)
 importFrom(stats,rnorm)
-importFrom(tibble,as_tibble)
+importFrom(tidyr,pivot_longer)
+importFrom(tidyr,unnest_wider)
 importFrom(utils,packageVersion)
