--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ino
 Title: Initialization of Numerical Optimization
-Version: 1.0.2
+Version: 1.1.0
 Authors@R: c(
     person("Lennart", "Oelschl\u00e4ger", 
            email = "oelschlaeger.lennart@gmail.com", 
@@ -27,31 +27,27 @@ Imports:
     checkmate,
     cli,
     dplyr,
-    forcats,
     future,
     future.apply,
     ggplot2,
-    glue,
     normalize (>= 0.1.2),
-    numDeriv,
     oeli (>= 0.7.4),
     optimizeR (>= 1.2.1),
     portion (>= 0.1.2),
     progressr,
     purrr,
     R6,
-    reshape2,
     rlang,
-    scales,
     stats,
-    TestFunctions,
-    tibble,
+    tidyr,
     utils
 Suggests:
     knitr,
     fHMM (>= 1.3.1),
     renv,
     rmarkdown,
+    scales,
+    TestFunctions,
     testthat
 Config/testthat/edition: 3
 URL: https://loelschlaeger.de/ino/, https://github.com/loelschlaeger/ino
